# miniU

./: .gitignore  Cargo.toml  README.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: StateBoard.vue
src/: main.rs  memory.rs
src/modules/memory/: database.rs  mod.rs  state_board.rs
src/traits/: cursor.rs  llm_client.rs  llm_scorer.rs  mod.rs  scorer.rs  summarizer.rs
