[package]
name = "miniU"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.89"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
